Create cards for Explore html

--- a/explore.html
+++ b/explore.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Explore</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
@@ -43,6 +44,27 @@
             </ul>
         </div>
     </nav>
+
+    <div class="card" style="width: 18rem; margin: 1rem;">
+        <img src="images/products/burger.jpg" class="card-img-top" alt="Burger">
+        <div class="card-body">
+            <h5 class="card-title">Burger</h5>
+            <p class="card-text">Juice burgers!</p>
+            <button class="btn btn-success"><i class="fa fa-thumbs-up" aria-hidden="true"></i></button>
+            <button class="btn btn-danger"><i class="fa fa-thumbs-down" aria-hidden="true"></i></button>
+            <button class="btn btn-primary float-right"><i class="fa fa-plus" aria-hidden="true"></i></button>
+        </div>
+    </div>
+    <div class="card" style="width: 18rem; margin: 1rem;">
+        <img src="images/products/chicken.jpg" class="card-img-top" alt="Chicken">
+        <div class="card-body">
+            <h5 class="card-title">Chicken</h5>
+            <p class="card-text">Fresh chicken!</p>
+            <button class="btn btn-success"><i class="fa fa-thumbs-up" aria-hidden="true"></i></button>
+            <button class="btn btn-danger"><i class="fa fa-thumbs-down" aria-hidden="true"></i></button>
+            <button class="btn btn-primary float-right"><i class="fa fa-plus" aria-hidden="true"></i></button>
+        </div>
+    </div>
 </body>
 
 </html>
