--- a/explore.html
+++ b/explore.html
@@ -49,7 +49,7 @@
         <img src="images/products/burger.jpg" class="card-img-top" alt="Burger">
         <div class="card-body">
             <h5 class="card-title">Burger</h5>
-            <p class="card-text">Juice burgers!</p>
+            <p class="card-text">Juicy burgers!</p>
             <button class="btn btn-success"><i class="fa fa-thumbs-up" aria-hidden="true"></i></button>
             <button class="btn btn-danger"><i class="fa fa-thumbs-down" aria-hidden="true"></i></button>
             <button class="btn btn-primary float-right"><i class="fa fa-plus" aria-hidden="true"></i></button>
