--- a/explore.html
+++ b/explore.html
@@ -44,26 +44,77 @@
             </ul>
         </div>
     </nav>
-
-    <div class="card" style="width: 18rem; margin: 1rem;">
-        <img src="images/products/burger.jpg" class="card-img-top" alt="Burger">
-        <div class="card-body">
-            <h5 class="card-title">Burger</h5>
-            <p class="card-text">Juicy burgers!</p>
-            <button class="btn btn-success"><i class="fa fa-thumbs-up" aria-hidden="true"></i></button>
-            <button class="btn btn-danger"><i class="fa fa-thumbs-down" aria-hidden="true"></i></button>
-            <button class="btn btn-primary float-right"><i class="fa fa-plus" aria-hidden="true"></i></button>
+    <!-- first row -->
+    <div class="row">
+        <!-- first image -->
+        <div class="col">
+            <div class="card" style="width: 15rem; margin: 1rem;">
+                <img src="images/products/burger.jpg" class="card-img-top" alt="Burger" height="160px">
+                <div class="card-body">
+                    <h5 class="card-title">Burger</h5>
+                    <p class="card-text">Juicy burgers!</p>
+                    <button class="btn btn-success"><i class="fa fa-thumbs-up" aria-hidden="true"></i></button>
+                    <button class="btn btn-danger"><i class="fa fa-thumbs-down" aria-hidden="true"></i></button>
+                    <button class="btn btn-primary float-right"><i class="fa fa-plus" aria-hidden="true"></i></button>
+                </div>
+            </div>
+        </div>
+        <!-- second image -->
+        <div class="col">
+            <div class="card" style="width: 15rem; margin: 1rem;">
+                <img src="images/products/chicken.jpg" class="card-img-top" alt="Chicken" height="160px">
+                <div class="card-body">
+                    <h5 class="card-title">Chicken</h5>
+                    <p class="card-text">Fresh chicken!</p>
+                    <button class="btn btn-success"><i class="fa fa-thumbs-up" aria-hidden="true"></i></button>
+                    <button class="btn btn-danger"><i class="fa fa-thumbs-down" aria-hidden="true"></i></button>
+                    <button class="btn btn-primary float-right"><i class="fa fa-plus" aria-hidden="true"></i></button>
+                </div>
+            </div>
+        </div>
+        <!-- third image -->
+        <div class="col">
+            <div class="card" style="width: 15rem; margin: 1rem;">
+                <img src="images/products/souvlaki.jpg" class="card-img-top" alt="Souvlaki" height="160px">
+                <div class="card-body">
+                    <h5 class="card-title">Souvlaki</h5>
+                    <p class="card-text">Delicious Souvlaki!</p>
+                    <button class="btn btn-success"><i class="fa fa-thumbs-up" aria-hidden="true"></i></button>
+                    <button class="btn btn-danger"><i class="fa fa-thumbs-down" aria-hidden="true"></i></button>
+                    <button class="btn btn-primary float-right"><i class="fa fa-plus" aria-hidden="true"></i></button>
+                </div>
+            </div>
+        </div>
+        <!-- forth image -->
+        <div class="col">
+            <div class="card" style="width: 15rem; margin: 1rem;">
+                <img src="images/products/pizza.jpg" class="card-img-top" alt="Pizza" height="160px">
+                <div class="card-body">
+                    <h5 class="card-title">Pizza</h5>
+                    <p class="card-text">Delicious Pizza!</p>
+                    <button class="btn btn-success"><i class="fa fa-thumbs-up" aria-hidden="true"></i></button>
+                    <button class="btn btn-danger"><i class="fa fa-thumbs-down" aria-hidden="true"></i></button>
+                    <button class="btn btn-primary float-right"><i class="fa fa-plus" aria-hidden="true"></i></button>
+                </div>
+            </div>
+        </div> 
+        <div class="col">
+            <div class="card" style="width: 15rem; margin: 1rem;">
+                <img src="images/products/tortilla.jpeg" class="card-img-top" alt="Tortilla" height="160px">
+                <div class="card-body">
+                    <h5 class="card-title">Tortilla</h5>
+                    <p class="card-text">Delicious Tortilla!</p>
+                    <button class="btn btn-success"><i class="fa fa-thumbs-up" aria-hidden="true"></i></button>
+                    <button class="btn btn-danger"><i class="fa fa-thumbs-down" aria-hidden="true"></i></button>
+                    <button class="btn btn-primary float-right"><i class="fa fa-plus" aria-hidden="true"></i></button>
+                </div>
+            </div>
         </div>
     </div>
-    <div class="card" style="width: 18rem; margin: 1rem;">
-        <img src="images/products/chicken.jpg" class="card-img-top" alt="Chicken">
-        <div class="card-body">
-            <h5 class="card-title">Chicken</h5>
-            <p class="card-text">Fresh chicken!</p>
-            <button class="btn btn-success"><i class="fa fa-thumbs-up" aria-hidden="true"></i></button>
-            <button class="btn btn-danger"><i class="fa fa-thumbs-down" aria-hidden="true"></i></button>
-            <button class="btn btn-primary float-right"><i class="fa fa-plus" aria-hidden="true"></i></button>
-        </div>
+    <!-- Second row -->
+    <div class="row">
+        <!-- first image -->
+        
     </div>
 </body>
 
