Insert more items in explore.html

--- a/explore.html
+++ b/explore.html
@@ -47,12 +47,12 @@
     <!-- first row -->
     <div class="row">
         <!-- first image -->
-        <div class="col">
-            <div class="card" style="width: 15rem; margin: 1rem;">
-                <img src="images/products/burger.jpg" class="card-img-top" alt="Burger" height="160px">
+        <div class="col" style="align-content: center">
+            <div class="card" style="width: 15rem; margin: 1rem;margin-left: auto;margin-right: auto">
+                <img src="images/products/burger.jpg" class="card-img-top" alt="Burger" height="160px"  width="150px">
                 <div class="card-body">
-                    <h5 class="card-title">Burger</h5>
-                    <p class="card-text">Juicy burgers!</p>
+                    <h5 class="card-title" style="text-align: center">Burger</h5>
+                    <p class="card-text" style="text-align: center">Juicy burgers!</p>
                     <button class="btn btn-success"><i class="fa fa-thumbs-up" aria-hidden="true"></i></button>
                     <button class="btn btn-danger"><i class="fa fa-thumbs-down" aria-hidden="true"></i></button>
                     <button class="btn btn-primary float-right"><i class="fa fa-plus" aria-hidden="true"></i></button>
@@ -60,12 +60,12 @@
             </div>
         </div>
         <!-- second image -->
-        <div class="col">
-            <div class="card" style="width: 15rem; margin: 1rem;">
-                <img src="images/products/chicken.jpg" class="card-img-top" alt="Chicken" height="160px">
+        <div class="col" style="align-content: center">
+            <div class="card" style="width: 15rem; margin: 1rem;margin-left: auto;margin-right: auto">
+                <img src="images/products/chicken.jpg" class="card-img-top" alt="Chicken" height="160px"  width="150px">
                 <div class="card-body">
-                    <h5 class="card-title">Chicken</h5>
-                    <p class="card-text">Fresh chicken!</p>
+                    <h5 class="card-title" style="text-align: center">Chicken</h5>
+                    <p class="card-text" style="text-align: center">Fresh chicken!</p>
                     <button class="btn btn-success"><i class="fa fa-thumbs-up" aria-hidden="true"></i></button>
                     <button class="btn btn-danger"><i class="fa fa-thumbs-down" aria-hidden="true"></i></button>
                     <button class="btn btn-primary float-right"><i class="fa fa-plus" aria-hidden="true"></i></button>
@@ -73,12 +73,12 @@
             </div>
         </div>
         <!-- third image -->
-        <div class="col">
-            <div class="card" style="width: 15rem; margin: 1rem;">
-                <img src="images/products/souvlaki.jpg" class="card-img-top" alt="Souvlaki" height="160px">
+        <div class="col" style="align-content: center">
+            <div class="card" style="width: 15rem; margin: 1rem;margin-left: auto;margin-right: auto">
+                <img src="images/products/souvlaki.jpg" class="card-img-top" alt="Souvlaki" height="160px"  width="150px">
                 <div class="card-body">
-                    <h5 class="card-title">Souvlaki</h5>
-                    <p class="card-text">Delicious Souvlaki!</p>
+                    <h5 class="card-title" style="text-align: center">Souvlaki</h5>
+                    <p class="card-text" style="text-align: center">Delicious Souvlaki!</p>
                     <button class="btn btn-success"><i class="fa fa-thumbs-up" aria-hidden="true"></i></button>
                     <button class="btn btn-danger"><i class="fa fa-thumbs-down" aria-hidden="true"></i></button>
                     <button class="btn btn-primary float-right"><i class="fa fa-plus" aria-hidden="true"></i></button>
@@ -86,24 +86,25 @@
             </div>
         </div>
         <!-- forth image -->
-        <div class="col">
-            <div class="card" style="width: 15rem; margin: 1rem;">
-                <img src="images/products/pizza.jpg" class="card-img-top" alt="Pizza" height="160px">
+        <div class="col" style="align-content: center">
+            <div class="card" style="width: 15rem; margin: 1rem;margin-left: auto;margin-right: auto">
+                <img src="images/products/pizza.jpg" class="card-img-top" alt="Pizza" height="160px"  width="150px">
                 <div class="card-body">
-                    <h5 class="card-title">Pizza</h5>
-                    <p class="card-text">Delicious Pizza!</p>
+                    <h5 class="card-title" style="text-align: center">Pizza</h5>
+                    <p class="card-text" style="text-align: center">Delicious Pizza!</p>
                     <button class="btn btn-success"><i class="fa fa-thumbs-up" aria-hidden="true"></i></button>
                     <button class="btn btn-danger"><i class="fa fa-thumbs-down" aria-hidden="true"></i></button>
                     <button class="btn btn-primary float-right"><i class="fa fa-plus" aria-hidden="true"></i></button>
                 </div>
             </div>
         </div> 
-        <div class="col">
-            <div class="card" style="width: 15rem; margin: 1rem;">
-                <img src="images/products/tortilla.jpeg" class="card-img-top" alt="Tortilla" height="160px">
+        <!-- fifth image -->
+        <div class="col" style="align-content: center">
+            <div class="card" style="width: 15rem; margin: 1rem;margin-left: auto;margin-right: auto">
+                <img src="images/products/tortilla.jpeg" class="card-img-top" alt="Tortilla" height="160px"  width="150px">
                 <div class="card-body">
-                    <h5 class="card-title">Tortilla</h5>
-                    <p class="card-text">Delicious Tortilla!</p>
+                    <h5 class="card-title" style="text-align: center">Tortilla</h5>
+                    <p class="card-text" style="text-align: center">Delicious Tortilla!</p>
                     <button class="btn btn-success"><i class="fa fa-thumbs-up" aria-hidden="true"></i></button>
                     <button class="btn btn-danger"><i class="fa fa-thumbs-down" aria-hidden="true"></i></button>
                     <button class="btn btn-primary float-right"><i class="fa fa-plus" aria-hidden="true"></i></button>
@@ -114,7 +115,85 @@
     <!-- Second row -->
     <div class="row">
         <!-- first image -->
-        
+        <div class="col" style="align-content: center">
+            <div class="card" style="width: 15rem; margin: 1rem;margin-left: auto;margin-right: auto">
+                <img src="images/products/sushi.jpg" class="card-img-top" alt="Sushi" height="160px"  width="150px">
+                <div class="card-body">
+                    <h5 class="card-title" style="text-align: center">Sushi</h5>
+                    <p class="card-text" style="text-align: center">Delicious Sushi!</p>
+                    <button class="btn btn-success"><i class="fa fa-thumbs-up" aria-hidden="true"></i></button>
+                    <button class="btn btn-danger"><i class="fa fa-thumbs-down" aria-hidden="true"></i></button>
+                    <button class="btn btn-primary float-right"><i class="fa fa-plus" aria-hidden="true"></i></button>
+                </div>
+            </div>
+        </div>
+        <!-- Second image -->
+        <div class="col" style="align-content: centerr">
+            <div class="card" style="width: 15rem; margin: 1rem;margin-left: auto;margin-right: auto">
+                <img src="images/products/salad.jpg" class="card-img-top" alt="Salad" height="160px"  width="150px">
+                <div class="card-body">
+                    <h5 class="card-title" style="text-align: center">Salad</h5>
+                    <p class="card-text" style="text-align: center">Fresh Salad!</p>
+                    <button class="btn btn-success"><i class="fa fa-thumbs-up" aria-hidden="true"></i></button>
+                    <button class="btn btn-danger"><i class="fa fa-thumbs-down" aria-hidden="true"></i></button>
+                    <button class="btn btn-primary float-right"><i class="fa fa-plus" aria-hidden="true"></i></button>
+                </div>
+            </div>
+        </div>
+        <!-- Third image -->
+        <div class="col" style="align-content: center">
+            <div class="card" style="width: 15rem; margin: 1rem;margin-left: auto;margin-right: auto">
+                <img src="images/products/noodles.jpg" class="card-img-top" alt="Noodles" height="160px"  width="150px">
+                <div class="card-body">
+                    <h5 class="card-title" style="text-align: center">Noodles</h5>
+                    <p class="card-text" style="text-align: center">Fresh Noodles!</p>
+                    <button class="btn btn-success"><i class="fa fa-thumbs-up" aria-hidden="true"></i></button>
+                    <button class="btn btn-danger"><i class="fa fa-thumbs-down" aria-hidden="true"></i></button>
+                    <button class="btn btn-primary float-right"><i class="fa fa-plus" aria-hidden="true"></i></button>
+                </div>
+            </div>
+        </div>
+        <!-- Forth image -->
+        <div class="col" style="align-content: center">
+            <div class="card" style="width: 15rem; margin: 1rem;margin-left: auto;margin-right: auto">
+                <img src="images/products/coffee.jpg" class="card-img-top" alt="Coffee" height="160px"  width="150px">
+                <div class="card-body">
+                    <h5 class="card-title" style="text-align: center">Coffee</h5>
+                    <p class="card-text" style="text-align: center">Fresh Coffee!</p>
+                    <button class="btn btn-success"><i class="fa fa-thumbs-up" aria-hidden="true"></i></button>
+                    <button class="btn btn-danger"><i class="fa fa-thumbs-down" aria-hidden="true"></i></button>
+                    <button class="btn btn-primary float-right"><i class="fa fa-plus" aria-hidden="true"></i></button>
+                </div>
+            </div>
+        </div>
+        <!-- Fifth image -->
+        <div class="col" style="align-content: center">
+            <div class="card" style="width: 15rem; margin: 1rem;margin-left: auto;margin-right: auto">
+                <img src="images/products/doughnuts.jpg" class="card-img-top" alt="Doughnuts" height="160px"  width="150px">
+                <div class="card-body">
+                    <h5 class="card-title" style="text-align: center">Doughnuts</h5>
+                    <p class="card-text" style="text-align: center">Fresh Doughnuts!</p>
+                    <button class="btn btn-success"><i class="fa fa-thumbs-up" aria-hidden="true"></i></button>
+                    <button class="btn btn-danger"><i class="fa fa-thumbs-down" aria-hidden="true"></i></button>
+                    <button class="btn btn-primary float-right"><i class="fa fa-plus" aria-hidden="true"></i></button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <!-- first image -->
+        <div class="col" style="align-content: center">
+            <div class="card" style="width: 15rem; margin: 1rem;margin-left: auto;margin-right: auto">
+                <img src="images/products/fruit_cake.jpg" class="card-img-top" alt="Fruit Cake" height="160px"  width="150px">
+                <div class="card-body">
+                    <h5 class="card-title" style="text-align: center">Fruit Cake</h5>
+                    <p class="card-text" style="text-align: center">Delicious Fruit Cake!</p>
+                    <button class="btn btn-success"><i class="fa fa-thumbs-up" aria-hidden="true"></i></button>
+                    <button class="btn btn-danger"><i class="fa fa-thumbs-down" aria-hidden="true"></i></button>
+                    <button class="btn btn-primary float-right"><i class="fa fa-plus" aria-hidden="true"></i></button>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 
