Add more items in explore.html

--- a/explore.html
+++ b/explore.html
@@ -180,6 +180,7 @@
             </div>
         </div>
     </div>
+    <!--Third row -->
     <div class="row">
         <!-- first image -->
         <div class="col" style="align-content: center">
@@ -188,6 +189,18 @@
                 <div class="card-body">
                     <h5 class="card-title" style="text-align: center">Fruit Cake</h5>
                     <p class="card-text" style="text-align: center">Delicious Fruit Cake!</p>
+                    <button class="btn btn-success"><i class="fa fa-thumbs-up" aria-hidden="true"></i></button>
+                    <button class="btn btn-danger"><i class="fa fa-thumbs-down" aria-hidden="true"></i></button>
+                    <button class="btn btn-primary float-right"><i class="fa fa-plus" aria-hidden="true"></i></button>
+                </div>
+            </div>
+        </div>
+        <div class="col" style="align-content: center">
+            <div class="card" style="width: 15rem; margin: 1rem;margin-left: auto;margin-right: auto">
+                <img src="images/products/gyros.jpg" class="card-img-top" alt="Gyros" height="160px"  width="150px">
+                <div class="card-body">
+                    <h5 class="card-title" style="text-align: center">Gyros</h5>
+                    <p class="card-text" style="text-align: center">Delicious Gyros!</p>
                     <button class="btn btn-success"><i class="fa fa-thumbs-up" aria-hidden="true"></i></button>
                     <button class="btn btn-danger"><i class="fa fa-thumbs-down" aria-hidden="true"></i></button>
                     <button class="btn btn-primary float-right"><i class="fa fa-plus" aria-hidden="true"></i></button>
