--- a/myJourneys.html
+++ b/myJourneys.html
@@ -20,16 +20,15 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="https://foody.com.cy/">Foody</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <nav class="navbar navbar-expand-md navbar-light bg-white">
+        <a href="https://foody.com.cy/" class="navbar-brand"><img src="images/logo/logo.png" alt="Logo" style="width:55px;" style="length:150px;"></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar7">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item active">
-                    <a class="nav-link" href="myJourneys.html">My Journey<span class="sr-only">(current)</span></a>
+        <div class="navbar-collapse collapse justify-content-stretch" id="navbar">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="#">My Journeys</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="likes.html">Likes</a>
@@ -42,8 +41,7 @@
                 </li>
             </ul>
         </div>
-    </nav>
-
+        </nav>
 </body>
 
 </html>
