--- a/dislikes.html
+++ b/dislikes.html
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-md navbar-light bg-white">
+    <nav class="navbar navbar-expand-md navbar-light bg-white sticky-top">
         <a href="https://foody.com.cy/" class="navbar-brand"><img src="images/logo/logo.png" alt="Logo" style="width:55px;" style="length:150px;"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar7">
             <span class="navbar-toggler-icon"></span>
