--- a/explore.html
+++ b/explore.html
@@ -21,8 +21,8 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-md navbar-light bg-white">
-        <a href="https://foody.com.cy/" class="navbar-brand"><img src="images/logo/logo.png" alt="Logo" style="width:55px;" style="length:150px;"></a>
+    <nav class="navbar navbar-expand-md navbar-light bg-white sticky-top">
+        <a href="https://foody.com.cy/" class="navbar-brand"><img src="images/logo/logo.png" alt="Logo" style="width:55px;" style="length:100px;"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar7">
             <span class="navbar-toggler-icon"></span>
         </button>
