--- a/explore.html
+++ b/explore.html
@@ -43,9 +43,8 @@
             </ul>
         </div>
         </nav>
-    <!-- first row -->
+
     <div class="row">
-        <!-- first image -->
         <div class="col" style="align-content: center">
             <div class="card" style="width: 15rem; margin: 1rem;margin-left: auto;margin-right: auto">
                 <img src="images/products/burger.jpg" class="card-img-top" alt="Burger" height="160px"  width="150px">
@@ -58,7 +57,6 @@
                 </div>
             </div>
         </div>
-        <!-- second image -->
         <div class="col" style="align-content: center">
             <div class="card" style="width: 15rem; margin: 1rem;margin-left: auto;margin-right: auto">
                 <img src="images/products/chicken.jpg" class="card-img-top" alt="Chicken" height="160px"  width="150px">
@@ -84,7 +82,6 @@
                 </div>
             </div>
         </div>
-        <!-- forth image -->
         <div class="col" style="align-content: center">
             <div class="card" style="width: 15rem; margin: 1rem;margin-left: auto;margin-right: auto">
                 <img src="images/products/pizza.jpg" class="card-img-top" alt="Pizza" height="160px"  width="150px">
@@ -96,8 +93,7 @@
                     <button class="btn btn-primary float-right"><i class="fa fa-plus" aria-hidden="true"></i></button>
                 </div>
             </div>
-        </div> 
-        <!-- fifth image -->
+        </div>
         <div class="col" style="align-content: center">
             <div class="card" style="width: 15rem; margin: 1rem;margin-left: auto;margin-right: auto">
                 <img src="images/products/tortilla.jpeg" class="card-img-top" alt="Tortilla" height="160px"  width="150px">
@@ -110,10 +106,6 @@
                 </div>
             </div>
         </div>
-    </div>
-    <!-- Second row -->
-    <div class="row">
-        <!-- first image -->
         <div class="col" style="align-content: center">
             <div class="card" style="width: 15rem; margin: 1rem;margin-left: auto;margin-right: auto">
                 <img src="images/products/gyros.jpg" class="card-img-top" alt="Gyros" height="160px"  width="150px">
@@ -126,7 +118,18 @@
                 </div>
             </div>
         </div>
-        <!-- Second image -->
+        <div class="col" style="align-content: center">
+            <div class="card" style="width: 15rem; margin: 1rem;margin-left: auto;margin-right: auto">
+                <img src="images/products/club.jpg" class="card-img-top" alt="Club Sandwich" height="160px"  width="150px">
+                <div class="card-body">
+                    <h5 class="card-title" style="text-align: center">Club Sandwich</h5>
+                    <p class="card-text" style="text-align: center">Delicious Club Sandwich!</p>
+                    <button class="btn btn-success"><i class="fa fa-thumbs-up" aria-hidden="true"></i></button>
+                    <button class="btn btn-danger"><i class="fa fa-thumbs-down" aria-hidden="true"></i></button>
+                    <button class="btn btn-primary float-right"><i class="fa fa-plus" aria-hidden="true"></i></button>
+                </div>
+            </div>
+        </div>
         <div class="col" style="align-content: centerr">
             <div class="card" style="width: 15rem; margin: 1rem;margin-left: auto;margin-right: auto">
                 <img src="images/products/salad.jpg" class="card-img-top" alt="Salad" height="160px"  width="150px">
@@ -139,7 +142,6 @@
                 </div>
             </div>
         </div>
-        <!-- Third image -->
         <div class="col" style="align-content: center">
             <div class="card" style="width: 15rem; margin: 1rem;margin-left: auto;margin-right: auto">
                 <img src="images/products/noodles.jpg" class="card-img-top" alt="Noodles" height="160px"  width="150px">
@@ -152,7 +154,6 @@
                 </div>
             </div>
         </div>
-        <!-- Forth image -->
         <div class="col" style="align-content: center">
             <div class="card" style="width: 15rem; margin: 1rem;margin-left: auto;margin-right: auto">
                 <img src="images/products/sushi.jpg" class="card-img-top" alt="Sushi" height="160px"  width="150px">
@@ -165,7 +166,6 @@
                 </div>
             </div>
         </div>
-        <!-- Fifth image -->
         <div class="col" style="align-content: center">
             <div class="card" style="width: 15rem; margin: 1rem;margin-left: auto;margin-right: auto">
                 <img src="images/products/doughnuts.jpg" class="card-img-top" alt="Doughnuts" height="160px"  width="150px">
@@ -178,10 +178,6 @@
                 </div>
             </div>
         </div>
-    </div>
-    <!--Third row -->
-    <div class="row">
-        <!-- first image -->
         <div class="col" style="align-content: center">
             <div class="card" style="width: 15rem; margin: 1rem;margin-left: auto;margin-right: auto">
                 <img src="images/products/fruit_cake.jpg" class="card-img-top" alt="Fruit Cake" height="160px"  width="150px">
@@ -194,7 +190,6 @@
                 </div>
             </div>
         </div>
-        
         <div class="col" style="align-content: center">
             <div class="card" style="width: 15rem; margin: 1rem;margin-left: auto;margin-right: auto">
                 <img src="images/products/coffee.jpg" class="card-img-top" alt="Coffee" height="160px"  width="150px">
@@ -206,7 +201,7 @@
                     <button class="btn btn-primary float-right"><i class="fa fa-plus" aria-hidden="true"></i></button>
                 </div>
             </div>
-        </div>
+        </div> 
     </div>
 </body>
 
