Dislikes page - adding images

--- a/likes.html
+++ b/likes.html
@@ -17,6 +17,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
     </script>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
@@ -28,7 +29,7 @@
         <div class="navbar-collapse collapse justify-content-stretch" id="navbar">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">My Journeys</a>
+                    <a class="nav-link" href="myJourneys.html">My Journeys</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="likes.html">Likes</a>
