--- a/explore.html
+++ b/explore.html
@@ -18,6 +18,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
     </script>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
@@ -27,9 +28,9 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="navbar-collapse collapse justify-content-stretch" id="navbar">
-            <ul class="navbar-nav ml-auto">
+            <ul class="navbar-nav ml-auto" id="bootstrap-override">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">My Journeys</a>
+                    <a class="nav-link" href="myJourneys.html">My Journeys</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="likes.html">Likes</a>
