--- a/explore.html
+++ b/explore.html
@@ -22,13 +22,15 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-md navbar-light bg-white sticky-top">
-        <a href="https://foody.com.cy/" class="navbar-brand"><img src="images/logo/logo.png" alt="Logo" style="width:55px;" style="length:100px;"></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar7">
+    <nav class="navbar navbar-expand-lg navbar-dark dark" style="padding:6px;">
+        <a class="navbar-brand" href="https://foody.com.cy/"><img src="images/logo/foody.png" alt="Foody's website"
+                style="width:128px;"></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="navbar-collapse collapse justify-content-stretch" id="navbar">
-            <ul class="navbar-nav ml-auto" id="bootstrap-override">
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
                 <li class="nav-item">
                     <a class="nav-link" href="myJourneys.html">My Journeys</a>
                 </li>
@@ -38,17 +40,17 @@
                 <li class="nav-item">
                     <a class="nav-link" href="dislikes.html">Dislikes</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="explore.html">Explore</a>
+                <li class="nav-item active">
+                    <a class="nav-link" href="explore.html">Explore<span class="sr-only">(current)</span></a>
                 </li>
             </ul>
         </div>
-        </nav>
+    </nav>
 
     <div class="row">
         <div class="col" style="align-content: center">
             <div class="card" style="width: 15rem; margin: 1rem;margin-left: auto;margin-right: auto">
-                <img src="images/products/burger.jpg" class="card-img-top" alt="Burger" height="160px"  width="150px">
+                <img src="images/products/burger.jpg" class="card-img-top" alt="Burger" height="160px" width="150px">
                 <div class="card-body">
                     <h5 class="card-title" style="text-align: center">Burger</h5>
                     <p class="card-text" style="text-align: center">Juicy burgers!</p>
@@ -60,7 +62,7 @@
         </div>
         <div class="col" style="align-content: center">
             <div class="card" style="width: 15rem; margin: 1rem;margin-left: auto;margin-right: auto">
-                <img src="images/products/chicken.jpg" class="card-img-top" alt="Chicken" height="160px"  width="150px">
+                <img src="images/products/chicken.jpg" class="card-img-top" alt="Chicken" height="160px" width="150px">
                 <div class="card-body">
                     <h5 class="card-title" style="text-align: center">Chicken</h5>
                     <p class="card-text" style="text-align: center">Fresh chicken!</p>
@@ -73,7 +75,8 @@
         <!-- third image -->
         <div class="col" style="align-content: center">
             <div class="card" style="width: 15rem; margin: 1rem;margin-left: auto;margin-right: auto">
-                <img src="images/products/souvlaki.jpg" class="card-img-top" alt="Souvlaki" height="160px"  width="150px">
+                <img src="images/products/souvlaki.jpg" class="card-img-top" alt="Souvlaki" height="160px"
+                    width="150px">
                 <div class="card-body">
                     <h5 class="card-title" style="text-align: center">Souvlaki</h5>
                     <p class="card-text" style="text-align: center">Delicious Souvlaki!</p>
@@ -85,7 +88,7 @@
         </div>
         <div class="col" style="align-content: center">
             <div class="card" style="width: 15rem; margin: 1rem;margin-left: auto;margin-right: auto">
-                <img src="images/products/pizza.jpg" class="card-img-top" alt="Pizza" height="160px"  width="150px">
+                <img src="images/products/pizza.jpg" class="card-img-top" alt="Pizza" height="160px" width="150px">
                 <div class="card-body">
                     <h5 class="card-title" style="text-align: center">Pizza</h5>
                     <p class="card-text" style="text-align: center">Delicious Pizza!</p>
@@ -97,7 +100,8 @@
         </div>
         <div class="col" style="align-content: center">
             <div class="card" style="width: 15rem; margin: 1rem;margin-left: auto;margin-right: auto">
-                <img src="images/products/tortilla.jpeg" class="card-img-top" alt="Tortilla" height="160px"  width="150px">
+                <img src="images/products/tortilla.jpeg" class="card-img-top" alt="Tortilla" height="160px"
+                    width="150px">
                 <div class="card-body">
                     <h5 class="card-title" style="text-align: center">Tortilla</h5>
                     <p class="card-text" style="text-align: center">Delicious Tortilla!</p>
@@ -109,7 +113,7 @@
         </div>
         <div class="col" style="align-content: center">
             <div class="card" style="width: 15rem; margin: 1rem;margin-left: auto;margin-right: auto">
-                <img src="images/products/gyros.jpg" class="card-img-top" alt="Gyros" height="160px"  width="150px">
+                <img src="images/products/gyros.jpg" class="card-img-top" alt="Gyros" height="160px" width="150px">
                 <div class="card-body">
                     <h5 class="card-title" style="text-align: center">Gyros</h5>
                     <p class="card-text" style="text-align: center">Delicious Gyros!</p>
@@ -121,7 +125,8 @@
         </div>
         <div class="col" style="align-content: center">
             <div class="card" style="width: 15rem; margin: 1rem;margin-left: auto;margin-right: auto">
-                <img src="images/products/club.jpg" class="card-img-top" alt="Club Sandwich" height="160px"  width="150px">
+                <img src="images/products/club.jpg" class="card-img-top" alt="Club Sandwich" height="160px"
+                    width="150px">
                 <div class="card-body">
                     <h5 class="card-title" style="text-align: center">Club Sandwich</h5>
                     <p class="card-text" style="text-align: center">Delicious Club Sandwich!</p>
@@ -133,7 +138,7 @@
         </div>
         <div class="col" style="align-content: centerr">
             <div class="card" style="width: 15rem; margin: 1rem;margin-left: auto;margin-right: auto">
-                <img src="images/products/salad.jpg" class="card-img-top" alt="Salad" height="160px"  width="150px">
+                <img src="images/products/salad.jpg" class="card-img-top" alt="Salad" height="160px" width="150px">
                 <div class="card-body">
                     <h5 class="card-title" style="text-align: center">Salad</h5>
                     <p class="card-text" style="text-align: center">Fresh Salad!</p>
@@ -145,7 +150,7 @@
         </div>
         <div class="col" style="align-content: center">
             <div class="card" style="width: 15rem; margin: 1rem;margin-left: auto;margin-right: auto">
-                <img src="images/products/noodles.jpg" class="card-img-top" alt="Noodles" height="160px"  width="150px">
+                <img src="images/products/noodles.jpg" class="card-img-top" alt="Noodles" height="160px" width="150px">
                 <div class="card-body">
                     <h5 class="card-title" style="text-align: center">Noodles</h5>
                     <p class="card-text" style="text-align: center">Fresh Noodles!</p>
@@ -157,7 +162,7 @@
         </div>
         <div class="col" style="align-content: center">
             <div class="card" style="width: 15rem; margin: 1rem;margin-left: auto;margin-right: auto">
-                <img src="images/products/sushi.jpg" class="card-img-top" alt="Sushi" height="160px"  width="150px">
+                <img src="images/products/sushi.jpg" class="card-img-top" alt="Sushi" height="160px" width="150px">
                 <div class="card-body">
                     <h5 class="card-title" style="text-align: center">Sushi</h5>
                     <p class="card-text" style="text-align: center">Delicious Sushi!</p>
@@ -169,7 +174,8 @@
         </div>
         <div class="col" style="align-content: center">
             <div class="card" style="width: 15rem; margin: 1rem;margin-left: auto;margin-right: auto">
-                <img src="images/products/doughnuts.jpg" class="card-img-top" alt="Doughnuts" height="160px"  width="150px">
+                <img src="images/products/doughnuts.jpg" class="card-img-top" alt="Doughnuts" height="160px"
+                    width="150px">
                 <div class="card-body">
                     <h5 class="card-title" style="text-align: center">Doughnuts</h5>
                     <p class="card-text" style="text-align: center">Fresh Doughnuts!</p>
@@ -181,7 +187,8 @@
         </div>
         <div class="col" style="align-content: center">
             <div class="card" style="width: 15rem; margin: 1rem;margin-left: auto;margin-right: auto">
-                <img src="images/products/fruit_cake.jpg" class="card-img-top" alt="Fruit Cake" height="160px"  width="150px">
+                <img src="images/products/fruit_cake.jpg" class="card-img-top" alt="Fruit Cake" height="160px"
+                    width="150px">
                 <div class="card-body">
                     <h5 class="card-title" style="text-align: center">Fruit Cake</h5>
                     <p class="card-text" style="text-align: center">Delicious Fruit Cake!</p>
@@ -193,7 +200,7 @@
         </div>
         <div class="col" style="align-content: center">
             <div class="card" style="width: 15rem; margin: 1rem;margin-left: auto;margin-right: auto">
-                <img src="images/products/coffee.jpg" class="card-img-top" alt="Coffee" height="160px"  width="150px">
+                <img src="images/products/coffee.jpg" class="card-img-top" alt="Coffee" height="160px" width="150px">
                 <div class="card-body">
                     <h5 class="card-title" style="text-align: center">Coffee</h5>
                     <p class="card-text" style="text-align: center">Fresh Coffee!</p>
@@ -202,7 +209,7 @@
                     <button class="btn btn-primary float-right"><i class="fa fa-plus" aria-hidden="true"></i></button>
                 </div>
             </div>
-        </div> 
+        </div>
     </div>
 </body>
 
