--- a/likes.html
+++ b/likes.html
@@ -21,18 +21,20 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-md navbar-light bg-white sticky-top">
-        <a href="https://foody.com.cy/" class="navbar-brand"><img src="images/logo/logo.png" alt="Logo" style="width:55px;" style="length:150px;"></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar7">
+    <nav class="navbar navbar-expand-lg navbar-dark dark" style="padding:6px;">
+        <a class="navbar-brand" href="https://foody.com.cy/"><img src="images/logo/foody.png" alt="Foody's website"
+                style="width:128px;"></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="navbar-collapse collapse justify-content-stretch" id="navbar">
-            <ul class="navbar-nav ml-auto">
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
                 <li class="nav-item">
                     <a class="nav-link" href="myJourneys.html">My Journeys</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="likes.html">Likes</a>
+                <li class="nav-item active">
+                    <a class="nav-link" href="likes.html">Likes<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="dislikes.html">Dislikes</a>
@@ -42,7 +44,7 @@
                 </li>
             </ul>
         </div>
-        </nav>
+    </nav>
 </body>
 
 </html>
