--- a/dislikes.html
+++ b/dislikes.html
@@ -46,52 +46,60 @@
             </ul>
         </div>
     </nav>
-    <div class="row">
-        <div class="col" style="align-content: right">
-            <div class="card" style="width: 15rem; margin: 1rem;margin-left: auto;margin-right: auto">
-                <img src="images/products/revithia.jpg" class="card-img-top" alt="Revithia" height="160px"
-                    width="150px">
-                <button class="btn btn-outline-dark pull-right"><i class="fa fa-trash" aria-hidden="true"></i></button>
-
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-" style="align-content: right">
+                <div class="card explore_card">
+                    <img src="images/products/revithia.jpg" class="card-img-top food" alt="Revithia">
+                    <div class="card-body explore_card_body">
+                        <h5 class="card-title" style="text-align: center">Revithia</h5>
+                        <button class="btn btn-danger float-right"><i class="fa fa-trash"
+                                aria-hidden="true"></i></button>
+                    </div>
+                </div>
             </div>
-        </div>
-        <div class="col" style="align-content: right">
-            <div class="card" style="width: 15rem; margin: 1rem;margin-left: auto;margin-right: auto">
-                <img src="images/products/rokfor.jpg" class="card-img-top" alt="Rokfor" height="160px" width="150px">
-                <button class="btn btn-outline-dark pull-right"><i class="fa fa-trash" aria-hidden="true"></i></button>
-
+            <div class="col-" style="align-content: right">
+                <div class="card explore_card">
+                    <img src="images/products/rokfor.jpg" class="card-img-top food" alt="Roquefort">
+                    <div class="card-body explore_card_body">
+                        <h5 class="card-title" style="text-align: center">Roquefort</h5>
+                        <button class="btn btn-danger float-right"><i class="fa fa-trash"
+                                aria-hidden="true"></i></button>
+                    </div>
+                </div>
             </div>
-        </div>
-        <div class="col" style="align-content: right">
-            <div class="card" style="width: 15rem; margin: 1rem;margin-left: auto;margin-right: auto">
-                <img src="images/products/agkinares.jpg" class="card-img-top" alt="Agkinares" height="160px"
-                    width="150px">
-                <button class="btn btn-outline-dark pull-right"><i class="fa fa-trash" aria-hidden="true"></i></button>
-
+            <div class="col-" style="align-content: right">
+                <div class="card explore_card">
+                    <img src="images/products/agkinares.jpg" class="card-img-top food" alt="Agkinares">
+                    <div class="card-body explore_card_body">
+                        <h5 class="card-title" style="text-align: center">Agkinares</h5>
+                        <button class="btn btn-danger float-right"><i class="fa fa-trash"
+                                aria-hidden="true"></i></button>
+                    </div>
+                </div>
             </div>
-        </div>
-        <div class="col" style="align-content: right">
-            <div class="card" style="width: 15rem; margin: 1rem;margin-left: auto;margin-right: auto">
-                <img src="images/products/sardeles.jpg" class="card-img-top" alt="Sardeles" height="160px"
-                    width="150px">
-                <button class="btn btn-outline-dark pull-right"><i class="fa fa-trash" aria-hidden="true"></i></button>
-
+            <div class="col-" style="align-content: right">
+                <div class="card explore_card">
+                    <img src="images/products/sardeles.jpg" class="card-img-top food" alt="Sardeles">
+                    <div class="card-body explore_card_body">
+                        <h5 class="card-title" style="text-align: center">Sardeles</h5>
+                        <button class="btn btn-danger float-right"><i class="fa fa-trash"
+                                aria-hidden="true"></i></button>
+                    </div>
+                </div>
             </div>
-        </div>
-        <div class="col" style="align-content: right">
-            <div class="card" style="width: 15rem; margin: 1rem;margin-left: auto;margin-right: auto">
-                <img src="images/products/kounoupidi.jpg" class="card-img-top" alt="Kounoupidi" height="160px"
-                    width="150px">
-                <button class="btn btn-outline-dark pull-right"><i class="fa fa-trash" aria-hidden="true"></i></button>
-
+            <div class="col-" style="align-content: right">
+                <div class="card explore_card">
+                    <img src="images/products/kounoupidi.jpg" class="card-img-top food" alt="Kounoupidi">
+                    <div class="card-body explore_card_body">
+                        <h5 class="card-title" style="text-align: center">Kounoupidi</h5>
+                        <button class="btn btn-danger float-right"><i class="fa fa-trash"
+                                aria-hidden="true"></i></button>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
-
-
-
-
-
 </body>
 
 </html>
