--- a/likes.html
+++ b/likes.html
@@ -8,6 +8,7 @@
     <title>Likes</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
     </script>
@@ -45,6 +46,60 @@
             </ul>
         </div>
     </nav>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-" style="align-content: right">
+                <div class="card explore_card">
+                    <img src="images/products/revithia.jpg" class="card-img-top food" alt="Revithia">
+                    <div class="card-body explore_card_body">
+                        <h5 class="card-title" style="text-align: center">Revithia</h5>
+                        <button class="btn btn-danger float-right"><i class="fa fa-trash"
+                                aria-hidden="true"></i></button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-" style="align-content: right">
+                <div class="card explore_card">
+                    <img src="images/products/rokfor.jpg" class="card-img-top food" alt="Roquefort">
+                    <div class="card-body explore_card_body">
+                        <h5 class="card-title" style="text-align: center">Roquefort</h5>
+                        <button class="btn btn-danger float-right"><i class="fa fa-trash"
+                                aria-hidden="true"></i></button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-" style="align-content: right">
+                <div class="card explore_card">
+                    <img src="images/products/agkinares.jpg" class="card-img-top food" alt="Agkinares">
+                    <div class="card-body explore_card_body">
+                        <h5 class="card-title" style="text-align: center">Agkinares</h5>
+                        <button class="btn btn-danger float-right"><i class="fa fa-trash"
+                                aria-hidden="true"></i></button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-" style="align-content: right">
+                <div class="card explore_card">
+                    <img src="images/products/sardeles.jpg" class="card-img-top food" alt="Sardeles">
+                    <div class="card-body explore_card_body">
+                        <h5 class="card-title" style="text-align: center">Sardeles</h5>
+                        <button class="btn btn-danger float-right"><i class="fa fa-trash"
+                                aria-hidden="true"></i></button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-" style="align-content: right">
+                <div class="card explore_card">
+                    <img src="images/products/kounoupidi.jpg" class="card-img-top food" alt="Kounoupidi">
+                    <div class="card-body explore_card_body">
+                        <h5 class="card-title" style="text-align: center">Kounoupidi</h5>
+                        <button class="btn btn-danger float-right"><i class="fa fa-trash"
+                                aria-hidden="true"></i></button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
