--- a/explore.html
+++ b/explore.html
@@ -25,11 +25,11 @@
     <nav class="navbar navbar-expand-lg navbar-dark dark" style="padding:6px;">
         <a class="navbar-brand" href="https://foody.com.cy/"><img src="images/logo/foody.png" alt="Foody's website"
                 style="width:128px;"></a>
-        <button class="navbar-toggler" type="button" data-toggle="col-lapse" data-target="#navbarNav"
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="col-lapse navbar-col-lapse" id="navbarNav">
+        <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
                     <a class="nav-link" href="myJourneys.html">My Journeys</a>
@@ -46,9 +46,9 @@
             </ul>
         </div>
     </nav>
-    <div class="container">
-        <div class="row justify-content-start">
-            <div class="col-" style="align-content: center">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-" style="align-content: right">
                 <div class="card explore_card">
                     <img src="images/products/burger.jpg" class="card-img-top food" alt="Burger">
                     <div class="card-body explore_card_body">
@@ -61,8 +61,8 @@
                     </div>
                 </div>
             </div>
-            <div class="col-" style="align-content: center">
-                <div class="card  explore_card">
+            <div class="col-" style="align-content: right">
+                <div class="card explore_card">
                     <img src="images/products/chicken.jpg" class="card-img-top food" alt="Chicken">
                     <div class="card-body explore_card_body">
                         <h5 class="card-title" style="text-align: center">Chicken</h5>
@@ -75,7 +75,7 @@
                 </div>
             </div>
             <!-- third image -->
-            <div class="col-" style="align-content: center">
+            <div class="col-" style="align-content: right">
                 <div class="card  explore_card">
                     <img src="images/products/souvlaki.jpg" class="card-img-top food" alt="Souvlaki">
                     <div class="card-body explore_card_body">
@@ -88,7 +88,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-" style="align-content: center">
+            <div class="col-" style="align-content: right">
                 <div class="card explore_card">
                     <img src="images/products/pizza.jpg" class="card-img-top food" alt="Pizza">
                     <div class="card-body explore_card_body">
@@ -101,7 +101,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-" style="align-content: center">
+            <div class="col-" style="align-content: right">
                 <div class="card  explore_card">
                     <img src="images/products/tortilla.jpeg" class="card-img-top food" alt="Tortilla">
                     <div class="card-body explore_card_body">
@@ -114,7 +114,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-" style="align-content: center">
+            <div class="col-" style="align-content: right">
                 <div class="card  explore_card">
                     <img src="images/products/gyros.jpg" class="card-img-top food" alt="Gyros">
                     <div class="card-body explore_card_body">
@@ -127,7 +127,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-" style="align-content: center">
+            <div class="col-" style="align-content: right">
                 <div class="card  explore_card">
                     <img src="images/products/club.jpg" class="card-img-top food" alt="Club Sandwich">
                     <div class="card-body explore_card_body">
@@ -140,7 +140,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-" style="align-content: center">
+            <div class="col-" style="align-content: right">
                 <div class="card  explore_card">
                     <img src="images/products/salad.jpg" class="card-img-top food" alt="Salad">
                     <div class="card-body explore_card_body">
@@ -153,7 +153,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-" style="align-content: center">
+            <div class="col-" style="align-content: right">
                 <div class="card  explore_card">
                     <img src="images/products/noodles.jpg" class="card-img-top food" alt="Noodles">
                     <div class="card-body explore_card_body">
@@ -166,7 +166,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-" style="align-content: center">
+            <div class="col-" style="align-content: right">
                 <div class="card  explore_card">
                     <img src="images/products/sushi.jpg" class="card-img-top food" alt="Sushi">
                     <div class="card-body explore_card_body">
@@ -179,7 +179,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-" style="align-content: center">
+            <div class="col-" style="align-content: right">
                 <div class="card  explore_card">
                     <img src="images/products/doughnuts.jpg" class="card-img-top food" alt="Doughnuts">
                     <div class="card-body explore_card_body">
@@ -192,7 +192,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-" style="align-content: center">
+            <div class="col-" style="align-content: right">
                 <div class="card  explore_card">
                     <img src="images/products/fruit_cake.jpg" class="card-img-top food" alt="Fruit Cake">
                     <div class="card-body explore_card_body">
@@ -205,7 +205,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-" style="align-content: center">
+            <div class="col-" style="align-content: right">
                 <div class="card  explore_card">
                     <img src="images/products/coffee.jpg" class="card-img-top food" alt="Coffee">
                     <div class="card-body explore_card_body">
