--- a/myJourneys.html
+++ b/myJourneys.html
@@ -46,6 +46,73 @@
             </ul>
         </div>
     </nav>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-" style="align-content: right">
+                <div class="card journey_card">
+                    <img src="images/products/chicken.jpg" class="card-img-top journey" alt="Meat Lover">
+                    <div class="card-body journey_card_body">
+                        <h5 class="card-title" style="text-align: center;">Meat Lover</h5>
+                        <button class="btn btn-primary" data-toggle="modal" data-target="#meatLoverModal"><i
+                                class="fa fa-eye" aria-hidden="true"></i>&nbsp View</button>
+                        <button class="btn btn-primary"><i class="fa fa-cog" aria-hidden="true"></i>&nbsp Edit</button>
+                        <button class="btn btn-danger float-right"><i class="fa fa-trash" aria-hidden="true"></i>&nbsp
+                            Delete</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Modal -->
+    <div class="modal fade" id="meatLoverModal" tabindex="-1" role="dialog" aria-labelledby="meatLoverModalTitle"
+        aria-hidden="true">
+        <div class="modal-dialog modal-lg modal-dialog-centered modal-dialog-scrollable " role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="meatLoverModalTitle">Meat Lover</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <div class="container-fluid">
+                        <div class="row">
+                            <div class="col-md-4 modal_picture"><img src="images/products/chicken.jpg" class="view_food"
+                                    alt="Chicken"></div>
+                            <div class="col-md-4 modal_picture"><img src="images/products/chicken.jpg" class="view_food"
+                                    alt="Chicken"></div>
+                            <div class="col-md-4 modal_picture"><img src="images/products/chicken.jpg" class="view_food"
+                                    alt="Chicken"></div>
+                            <div class="col-md-4 modal_picture"><img src="images/products/chicken.jpg" class="view_food"
+                                    alt="Chicken"></div>
+                            <div class="col-md-4 modal_picture"><img src="images/products/chicken.jpg" class="view_food"
+                                    alt="Chicken"></div>
+                            <div class="col-md-4 modal_picture"><img src="images/products/chicken.jpg" class="view_food"
+                                    alt="Chicken"></div>
+                            <div class="col-md-4 modal_picture"><img src="images/products/chicken.jpg" class="view_food"
+                                    alt="Chicken"></div>
+                            <div class="col-md-4 modal_picture"><img src="images/products/chicken.jpg" class="view_food"
+                                    alt="Chicken"></div>
+                            <div class="col-md-4 modal_picture"><img src="images/products/chicken.jpg" class="view_food"
+                                    alt="Chicken"></div>
+                            <div class="col-md-4 modal_picture"><img src="images/products/chicken.jpg" class="view_food"
+                                    alt="Chicken"></div>
+                            <div class="col-md-4 modal_picture"><img src="images/products/chicken.jpg" class="view_food"
+                                    alt="Chicken"></div>
+                            <div class="col-md-4 modal_picture"><img src="images/products/chicken.jpg" class="view_food"
+                                    alt="Chicken"></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer  justify-content-between">
+                    <button class="btn btn-danger float-left"><i class="fa fa-trash" aria-hidden="true"></i>&nbsp
+                        Delete</button>
+                    <button class="btn btn-primary"><i class="fa fa-cog" aria-hidden="true"></i>&nbsp
+                        Edit</button>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
