Finish meat lover's journey content

--- a/myJourneys.html
+++ b/myJourneys.html
@@ -79,28 +79,24 @@
                         <div class="row">
                             <div class="col-md-4 modal_picture"><img src="images/products/chicken.jpg" class="view_food"
                                     alt="Chicken"></div>
-                            <div class="col-md-4 modal_picture"><img src="images/products/chicken.jpg" class="view_food"
-                                    alt="Chicken"></div>
-                            <div class="col-md-4 modal_picture"><img src="images/products/chicken.jpg" class="view_food"
-                                    alt="Chicken"></div>
-                            <div class="col-md-4 modal_picture"><img src="images/products/chicken.jpg" class="view_food"
-                                    alt="Chicken"></div>
-                            <div class="col-md-4 modal_picture"><img src="images/products/chicken.jpg" class="view_food"
-                                    alt="Chicken"></div>
-                            <div class="col-md-4 modal_picture"><img src="images/products/chicken.jpg" class="view_food"
-                                    alt="Chicken"></div>
-                            <div class="col-md-4 modal_picture"><img src="images/products/chicken.jpg" class="view_food"
-                                    alt="Chicken"></div>
-                            <div class="col-md-4 modal_picture"><img src="images/products/chicken.jpg" class="view_food"
-                                    alt="Chicken"></div>
-                            <div class="col-md-4 modal_picture"><img src="images/products/chicken.jpg" class="view_food"
-                                    alt="Chicken"></div>
-                            <div class="col-md-4 modal_picture"><img src="images/products/chicken.jpg" class="view_food"
-                                    alt="Chicken"></div>
-                            <div class="col-md-4 modal_picture"><img src="images/products/chicken.jpg" class="view_food"
-                                    alt="Chicken"></div>
-                            <div class="col-md-4 modal_picture"><img src="images/products/chicken.jpg" class="view_food"
-                                    alt="Chicken"></div>
+                            <div class="col-md-4 modal_picture"><img src="images/products/souvlaki.jpg"
+                                    class="view_food" alt="Souvlaki"></div>
+                            <div class="col-md-4 modal_picture"><img src="images/products/gyros.jpg" class="view_food"
+                                    alt="Gyros"></div>
+                            <div class="col-md-4 modal_picture"><img src="images/products/kleftiko.jpg"
+                                    class="view_food" alt="Kleftiko"></div>
+                            <div class="col-md-4 modal_picture"><img src="images/products/steak.jpg" class="view_food"
+                                    alt="Steak"></div>
+                            <div class="col-md-4 modal_picture"><img src="images/products/sweetandsour.jpg"
+                                    class="view_food" alt="Sweet & Sour"></div>
+                            <div class="col-md-4 modal_picture"><img src="images/products/ribs.jpg" class="view_food"
+                                    alt="Ribs"></div>
+                            <div class="col-md-4 modal_picture"><img src="images/products/friedchicken.jpeg"
+                                    class="view_food" alt="Fried Chicken"></div>
+                            <div class="col-md-4 modal_picture"><img src="images/products/porkchop.jpg"
+                                    class="view_food" alt="Pork Chop"></div>
+                            <div class="col-md-4 modal_picture"><img src="images/products/kebap.jpg" class="view_food"
+                                    alt="Kebap"></div>
                         </div>
                     </div>
                 </div>
